## Process this file with automake to produce Makefile.in
# Copyright (C) 2007-2012 Free Software Foundation, Inc.
#
# Author: Simon Josefsson
#
# This file is part of GnuTLS.
#
# This file is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# This file is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this file; if not, write to the Free Software Foundation,
# Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.

SUBDIRS = srp x509

EXTRA_DIST = gnutls-http-serv 

EXTRA_DIST += ca.tmpl client.tmpl proxy.tmpl server.tmpl

EXTRA_DIST += params.pem

EXTRA_DIST += srp-passwd.txt  srp-tpasswd.conf

EXTRA_DIST += psk-passwd.txt

EXTRA_DIST += \
	dhparams/rfc2409-group-1-768.pem	\
	dhparams/rfc2409-group-2-1024.pem	\
	dhparams/rfc3526-group-14-2048.pem	\
	dhparams/rfc3526-group-15-3072.pem	\
	dhparams/rfc3526-group-16-4096.pem	\
	dhparams/rfc3526-group-17-6144.pem	\
	dhparams/rfc3526-group-18-8192.pem	\
	dhparams/rfc3526-group-5-1536.pem	\
	dhparams/rfc5054-1024.pem		\
	dhparams/rfc5054-1536.pem		\
	dhparams/rfc5054-2048.pem		\
	dhparams/rfc5054-3072.pem		\
	dhparams/rfc5054-4096.pem		\
	dhparams/rfc5054-6144.pem		\
	dhparams/rfc5054-8192.pem		\
	dhparams/rfc5114-group-22-1024.pem	\
	dhparams/rfc5114-group-23-2048.pem	\
	dhparams/rfc5114-group-24-2048.pem	\
	dhparams/rfc7919-ffdhe2048.pem		\
	dhparams/rfc7919-ffdhe3072.pem		\
	dhparams/rfc7919-ffdhe4096.pem		\
	dhparams/rfc7919-ffdhe6144.pem		\
	dhparams/rfc7919-ffdhe8192.pem
